<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">窝米</string>
    <string name="bottomtitle01">消息</string>
    <string name="bottomtitle02">群组</string>
    <string name="bottomtitle03">茶友圈</string>
    <string name="bottomtitle04">联系人</string>
    <string name="bottomtitle05">我</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="back">返回</string>
    <string name="detail">详细</string>
    <string name="addfocus">加关注</string>
    <string name="mime_tv_01">TA的分享</string>
    <string name="mime_tv_02">创业空间</string>
    <string name="mime_tv_03">TA的圈子</string>
    <string name="share_dialog">TA还没有分享任何东西</string>
    <string name="refresh_down_text">下拉可刷新</string>
    <string name="refresh_release_text">松开可刷新</string>
    <string name="toast_text">ScrollView下拉刷新完毕</string>
    <string name="space_tv_product">创业产品</string>
    <string name="space_tv_special">创业专辑</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="share">分享</string>
    <string name="productdetail">商品详情</string>
    <string name="makegroup">创建群组</string>
    <string name="more">更多</string>
    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="publish">发布</string>
    <string name="allclear">清空</string>
    <string name="finished">完成</string>
    <string name="start">发起活动</string>
    <string name="pic">图片</string>
    <string name="photo">拍照</string>
    <string name="word">文字</string>
    <string name="activity">活动</string>
    <string name="for_services">联系客服</string>
    <string name="intoshop">进店逛逛</string>
    <string name="buy_now">立即购买</string>
    <string name="add_shoppingcart">加入购物车</string>
    <string name="like">[喜欢]</string>
    <string name="shoppingcart">[购物车]</string>
    <string name="recommended_reason">推荐理由：</string>
    <string name="title_introduce">介绍</string>
    <string name="group_notice">圈公告</string>
    <string name="l_position">显示所在的位置</string>
    <string name="s_position">显示发起活动所在的位置</string>
    <string name="pubto">发布到</string>
    <string name="tpubto">同时显示在微友圈</string>
    <string name="alert">违规的群组活动，可能导致群组被冻结</string>

    <drawable name="bg_nomal">#00ffffff</drawable>
    <drawable name="bg_nomal2">#ededed</drawable>
    <drawable name="bg_pressd">#41A3F5</drawable>

    <string name="title_activity_circle_info">CircleInfoActivity</string>
    <string name="circle_info">圈子资料</string>
    <string name="ask_for_circle">申请加入该圈子</string>
    <string name="add_member">添加圈成员</string>
    <string name="no_result">对不起，没有更多位置信息了</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试！</string>
    <string name="save">保存</string>
    <string name="add_contacts">添加</string>
    <string name="refresh_contacts">刷新</string>
    <string name="clear">清除</string>
    <string name="place">地点</string>
    <string name="circle_member">圈组成员</string>
    <string name="my_nickname">我的群昵称</string>
    <string name="show_other_nickname">群中显示他人的群昵称</string>
    <string name="ask_power">邀请权限</string>
    <string name="check_new_member">新成员加入需要审核</string>
    <string name="chat_power">聊天发言权限</string>
    <string name="activity_publish_power">动态发布权限</string>
    <string name="comment_power">评论发布权限</string>
    <string name="open_for_overgroup">非群组成员可见</string>
    <string name="group_state">群组状态</string>
    <string name="group_lianmeng">群联盟</string>
    <string name="exit_group_lianmeng">退出群联盟</string>
    <string name="exit_login">退出登录</string>
    <string name="group_name">圈名称</string>
    <string name="group_place">圈地点</string>
    <string name="group_introduce">圈简介</string>
    <string name="group_class">群等级</string>
    <string name="date_create">创建日</string>
    <string name="share_group">分享群组名片</string>
    <string name="new_message_">新消息提醒</string>
    <string name="message_shouye">置顶在消息首页</string>
    <string name="set_chat_background">设置当前聊天背景</string>
    <string name="detail_setting">详细设置</string>
    <string name="clear_chating">清空聊天记录</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="setting">设置</string>
    <string name="detail_info">详情资料</string>
    <string name="member_place">地区</string>
    <string name="signature">签名</string>
    <string name="favorite">兴趣</string>
    <string name="social_contact">社交</string>
    <string name="circle_group">圈组</string>
    <string name="add_to_contacts">添加到联系人</string>
    <string name="nearby_circle">附近圈组</string>
    <string name="create">创建</string>
    <string name="category_search">分类搜索</string>
    <string name="create_circle">创建圈组</string>
    <string name="see_circle">了解圈组</string>
    <string name="circle_name">圈名称:</string>
    <string name="cate_circle">美食群 - 美食 旅行 游戏 同城  游乐</string>
    <string name="secret_circle">私密圈 - 同事 同学 好友 家人 驴友</string>
    <string name="next_step">下一步</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="find_password">找回密码</string>
    <string name="regist">立即注册</string>
    <string name="login">登陆</string>

</resources>
