<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategorySearchActivity" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/s_search_bg"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/mime_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dip"
            android:drawableLeft="@drawable/back_seletor"
            android:text="@string/back"
            android:textColor="@drawable/text_blue"
            android:textSize="@dimen/sixteen" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_toLeftOf="@+id/mime_detail"
            android:layout_toRightOf="@id/mime_back"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/category_search"
            android:textColor="@color/black_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mime_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dip"
            android:text="@string/create"
            android:textColor="@drawable/text_blue"
            android:textSize="@dimen/sixteen" />
    </RelativeLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title" >
	</ListView>
</RelativeLayout>
