<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCircleActivity" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/s_search_bg"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/create_circle"
            android:textColor="@color/black_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/activity_selectimg_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:drawableLeft="@drawable/back_seletor"
            android:text="@string/back"
            android:textColor="@drawable/text_blue"
            android:textSize="@dimen/sixteen" />

        <TextView
            android:id="@+id/see_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:text="@string/see_circle"
            android:textColor="@drawable/text_blue"
            android:textSize="@dimen/sixteen" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/title"
        android:layout_margin="@dimen/jianju2"
        android:padding="@dimen/jianju2"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="top"
            android:hint="请填写圈简介，好的圈简介会让大家更感兴趣"
            android:minHeight="@dimen/bigheight"
            android:maxHeight="@dimen/maxheight"
            android:scrollbars="vertical"
            android:textSize="@dimen/sixteen" >
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="600" />

    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tou_weight_height6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_margin="@dimen/jianju2"
        android:background="@drawable/choose_seletor"
        android:textColor="@color/white"
        android:text="@string/next_step" />

</RelativeLayout>