<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/list_item_bg_operate_selected"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/mime_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dip"
            android:text="@string/back"
            android:textColor="@color/gold"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_toLeftOf="@+id/mime_detail"
            android:layout_toRightOf="@id/mime_back"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/productdetail"
            android:textColor="@color/lightwhite"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mime_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dip"
            android:text="@string/share"
            android:textColor="@color/gold"
            android:textSize="18sp" />
    </RelativeLayout>

<!--     <com.smt.pullview.util.RefreshableView -->
<!--         android:id="@+id/refresh_root" -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="fill_parent" -->
<!--         android:orientation="vertical" > -->

        <ScrollView
            android:id="@+id/scroll_view_root"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/top_height"
                    android:src="@drawable/mimetopimg" 
                    android:scaleType="fitXY"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="品韵(常规)100g品韵茉莉花茶" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_margin="5dp"
                        android:text="￥199" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="创业空间购买可享受9.5折！" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <com.smt.util.t.RoundImageView
                        android:id="@+id/mime_img"
                        android:layout_width="@dimen/eightyheight"
                        android:layout_height="@dimen/eightyheight"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_margin="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/tou" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_margin="5dp"
                        android:layout_toRightOf="@+id/mime_img"
                        android:text="桃子2010 推荐  " />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_margin="5dp"
                        android:text="10964人喜欢" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignRight="@+id/textView5"
                        android:layout_below="@+id/mime_img"
                        android:layout_margin="5dp"
                        android:text="@string/recommended_reason" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/textView6"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_margin="5dp"
                        android:text="色泽鲜活油润" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_lay_height"
                    android:layout_margin="8dp" >

                    <Button
                        android:id="@+id/button1"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/btn_lay_height"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:text="@string/for_services" />

                    <Button
                        android:id="@+id/button2"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/btn_lay_height"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:text="@string/intoshop" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_lay_height" 
                    android:layout_margin="8dp">

                    <RelativeLayout
                        android:id="@+id/relativeLayout1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" >

                        <Button
                            android:id="@+id/button3"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="@dimen/btn_lay_weight"
                            android:layout_height="@dimen/btn_lay_height"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginRight="5dp"
                            android:text="@string/buy_now" />

                        <Button
                            android:id="@+id/button4"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="@dimen/btn_lay_weight"
                            android:layout_height="@dimen/btn_lay_height"
                            android:layout_alignParentTop="true"
                            android:layout_toRightOf="@+id/button3"
                            android:layout_marginLeft="5dp"
                            android:text="@string/add_shoppingcart" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/like" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/shoppingcart" />

                </RelativeLayout>

            </LinearLayout>
        </ScrollView>

<!--     </com.smt.pullview.util.RefreshableView> -->

</LinearLayout>